# TFH-Sermon-Hub

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: backend.yml  frontend.yml  playwright.yml
Backend/: Tag.py  app.py  auth.py  config.py  database.py  down.bat  down.py  flake.nix  main.py  meta.py  models.py  populate.bat  populate.py  pyproject.toml  run.bat  run.sh  test.bat  testing.cfg  up.bat  up.py
Backend/templates/: Portal Prototype.html  meta.html
Backend/tests/: conftest.py  populate.py  test_api.py
Backend/tests/__snapshots__/: test_api.ambr
Backend/tsh/: __init__.py  app.py  auth.py  database.py  models.py  views.py
Frontend/: .gitignore  .prettierignore  README.md  biome.json  eslint.config.js  flake.nix  index.html  nvimconfig.lua  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  stylelint.config.js  tsconfig.app.json  vite.config.ts
Frontend/e2e/: navigation.spec.ts
Frontend/src/: AIChat.css  AIChat.tsx  AISearch.css  AISearch.tsx  AISearchResults.css  AISearchResults.tsx  App.tsx  Dashboard.css  Dashboard.tsx  ImportUpload.tsx  Login.css  Login.tsx  LoginPage.css  LoginPage.tsx  Notifications.css  Notifications.tsx  Series.css  Series.tsx  SermonDetail.css  SermonDetail.tsx  Sermons.css  Sermons.tsx  Settings.css  Settings.tsx  Speakers.css  Speakers.tsx  TagsAndMetadata.tsx  Transcripts.tsx  UserManagement.css  UserManagement.tsx  index.css  main.tsx
Frontend/src/components/: AISearchPreviewCard.css  AISearchPreviewCard.tsx  Button.css  Button.tsx  (+60 more)
Frontend/tests/: example.test.ts
(+37 files in other folders)
